# lau-numerical-pde

./: AGENT.md  Cargo.toml  README.md
memory/: JOURNAL.md
src/: advection_diffusion.rs  agent_field.rs  boundary.rs  error_analysis.rs  finite_diff.rs  heat.rs  lib.rs  poisson.rs  wave.rs
